--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
@@ -32,7 +32,9 @@
         app:layout_constraintBottom_toTopOf="@+id/inputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
+        app:reverseLayout="true"
+        app:stackFromEnd="true" />
 
     <include
         android:id="@+id/inputLayout"
