--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_reactions.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_reactions.xml
@@ -5,12 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/bottom_line"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reactionsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="10dp"
-        android:paddingTop="10dp"
+        android:paddingTop="20dp"
         android:paddingEnd="10dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="5"
