--- a/HomeWork_2/WorkChat/src/main/res/values/themes.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="Theme.WorkChat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.WorkChat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryVariant">@color/green</item>
         <item name="colorOnPrimary">@color/white</item>
