--- a/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <include
         android:id="@+id/toolbarLayout"
@@ -22,7 +23,7 @@
         android:layout_height="185dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="@android:color/transparent"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
         app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
